Fix issue code language overflow

--- a/assets/styles/_overrides.scss
+++ b/assets/styles/_overrides.scss
@@ -234,10 +234,6 @@ body {
     font-size: $body-size;
   }
 
-  pre[class*="language-"] {
-    overflow: hidden; /* this is the culprit */
-  }
-
   figure {
     margin-top: 0;
   }
